...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert"
        app:layout_constraintVertical_bias="0.04000002" />

    <!--    users first name-->
    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:hint="@string/userfirstname"
...
        app:drawableStartCompat="@drawable/ic_account_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

    <!--    Users last name-->
    <EditText
        android:id="@+id/userLastName"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints=" last name"
        android:background="@null"
        android:enabled="false"
...
        app:layout_constraintLeft_toRightOf="@+id/userFirstName"
        app:layout_constraintStart_toEndOf="@+id/userFirstName"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

    <!--    User email address-->
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="email address"
        android:background="@null"
...
        app:drawableStartCompat="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFirstName" />

    <!--users phone number must have 10 digits no spaces-->
    <EditText
        android:id="@+id/userPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:hint="@string/phonenumber"
...
        app:drawableStartCompat="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <!--    users password...needs to be blanked out or ******-->
    <Button
        android:id="@+id/userPassword"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:paddingLeft="15dp"
...
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum"
        app:layout_constraintVertical_bias="0.0" />

    <!--  button for deleting account-->

    <Button
        android:id="@+id/editButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_edit"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_save"
        android:enabled="false"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
