...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/input_field"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_field"
        android:drawablePadding="5dp"
        android:hint="@string/password"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_help"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccentDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin"
        app:layout_constraintVertical_bias="0.162" />

...
