...
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/input_field"
...
