...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="match_parent"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/signOutButton"
        app:layout_constraintStart_toEndOf="@+id/orderButton"
        app:layout_constraintTop_toTopOf="@+id/view">

        <ImageView
            android:id="@+id/imageViewHelp"
            android:layout_width="match_parent"
...
